tests/ui/union-no-field.rs
// This is rustc error.

use portable_atomic::Atomicable;

#[derive(Clone, Copy, Atomicable)]
union A {}

fn main() {}
